--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
             <h1>Registration</h1>
             <label for="name">Name</label>
             <input type="text" name="name">
+            <label for="mail">mail</label>
+            <input type="email" name="mail">
+            <label for="name">phone</label>
+            <input type="number" name="name">
+            <div class="conf"><button class="button-reg">Confirm</button></div>
         </form>
     </div>
 </body>
