--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
             <a href="#">item 3</a>
         </div>
         <div class="profile">
-            <img src="./assets-img/profile.jpeg" alt="profile">
-            <p>Username</p>
+            <img src="./assets-img/user.jpg" alt="user">
+            <h2>Username</h2>
         </div>
     </header>
     <div class="main">
         <form>
+            <div class="form-img-flex">
+                <img src="./assets-img/form-img.png" alt="form-img" class="form-img">
+            </div>
             <h1>Registration</h1>
             <label for="name">Name</label>
             <input type="text" name="name">
