--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <label for="mail">mail</label>
             <input type="email" name="mail">
             <label for="name">phone</label>
-            <input type="number" name="name">
+            <input type="tel" name="name">
             <div class="conf"><button class="button-reg">Confirm</button></div>
         </form>
     </div>
